working on proposal

--- a/developing mind/proposal developing mind.tex
+++ b/developing mind/proposal developing mind.tex
@@ -61,11 +61,12 @@ This question goes back to Plato or earlier and remains unanswered.
 %More recently it has become the focus of a branch of psychology, developmental psychology.
 %So far no one has convincingly answered the question, but two major breakthroughs have been made in the last three decades or so.
 Two recent scientific breakthroughs appear to bring us closer to an answer, and to show that the question is even less straightforward than previously  assumed.
-The first breakthrough is the discovery that preverbal infants enjoy surprisingly rich social abilities, abilities which
-% begin to be built from the first months of life and 
-may well facilitate the subsequent acquisition of linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
+The first breakthrough concerns social interaction;
+is the discovery that preverbal infants enjoy surprisingly rich social abilities.
+These abilities enable infants to engage in some forms of social interaction. 
+This may well facilitate the subsequent acquisition of linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
 A second breakthrough involves the use of increasingly sensitive---and sometimes controversial---methods to detect  expectations without relying on subjects' abilities to talk or act.  
-These methods have revealed sophisticated expectations about  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
+These methods have revealed sophisticated expectations about  causal interactions, numerosity, actions, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
 These expectations or the representations and processes underpinning them arguably also enable the emergence of knowledge. 
 Although each breakthrough has been discussed at length by leading psychologists, philosophers have yet to consider them systematically in print.
 Further, the two breakthroughs are associated with different camps, one nativist, the other Vygotskian.
@@ -82,7 +83,9 @@ Although detailed discussion of neuroscientific methods is beyond its scope, the
 
 The proposed book is organised by domains of knowledge, so that one chapter concerns knowledge of objects, another focuses on  knowledge of number, and so on.  
 The domains are chosen so that each set of developmental findings is linked to one or more philosophical issues. 
-For instance, research on knowledge of objects gives bite to questions about modularity and the nature of tacit knowledge \citep{Fodor:1983dg,Davies:1989gg}; research on knowledge of number invites discussions of nativism \citep{Fodor:1981ep,Spelke:1998im}; and developmental findings on knowledge of colour may challenge certain assumptions philosophers have made about relations between language, thought and perception \citep{Gilbert:2006yb,Regier:2009ve}.  
+For instance, research on knowledge of objects gives bite to questions about modularity and the nature of tacit knowledge%\citep{Fodor:1983dg,Davies:1989gg}
+; research on knowledge of number invites discussions of nativism% \citep{Fodor:1981ep,Spelke:1998im}
+; and developmental findings on knowledge of colour may challenge certain assumptions philosophers have made about relations between language, thought and perception.  
 
 
 
@@ -96,12 +99,12 @@ The book could also be used in courses on the philosophy of mind and action, or 
 To this end the book will not presuppose familiarity with the philosophy of mind and will include chapter summaries and suggestions for further reading.
 
 Professional philosophers whose research connects with issues in cognitive development may also find the book useful.  
-Judging by papers and manuscripts under review for journals and university presses, even those writing about cognitive development can have difficulty identifying the full range of findings relevant to their positions.
+Judging by papers and manuscripts under review, philosophers sometimes have difficulty identifying the full range of findings in cognitive development relevant to their positions.  
 
 Psychology students, undergraduate and graduate, are often drawn to philosophy and should find in this book an accessible introduction to key distinctions and arguments. 
 It might  be used for courses in developmental psychology. (I once co-taught such a course in psychology with Jim Russell in Cambridge).
 
-
+For readers captivated by Gopnik's popular \textit{The Philosophical Baby} \citep{gopnik:2009_philosophical} who can cope with academic texts, the proposed book might provide bridge to studying philosophy or psychology.
 
 
 
@@ -110,29 +113,29 @@ It might  be used for courses in developmental psychology. (I once co-taught suc
 
 
 \section{Timetable}
-I aim to submit a first draft of the manuscript by 30 September 2014.  
+I plan to submit a first draft of the manuscript by 30 September 2014.  
 
-I plan to try out material for the book while teaching courses at the University of Warwick (UK) and Central European University (Hungary).
+I aim to try out material for the book while teaching courses at  Central European University (Hungary) and the University of Warwick (UK).
 
 
 
 \section{Competition}
-At the time of writing there is no book or collection devoted to philosophical issues in cognitive development.
+At the time of writing there is no book or collection devoted to philosophical issues in cognitive development other than \textit{The Philosophical Baby} \citep{gopnik:2009_philosophical} which is primarily aimed at general readers.
 
 Philosophers have written monographs and edited collections on particular issues in cognitive development \citep[e.g.][]{Bermudez:2003dj,carruthers:1996_theories}.  
-The proposed book complements these by providing a unified discussion of a wider range of topics. 
+The proposed book complements these by providing integrated discussion of a wider range of topics. 
 The advantage is not just convenience: understanding and properly evaluating theories about the developmental origins of knowledge requires bringing together research on different domains of knowledge.
 
 There are also several collections bringing together research by philosophers and developmental psychologists or presenting developmental research in ways accessible to philosophers 
-\citep[e.g.][]{hirschfeld:1994_mapping,carruthers:2005_innate_structure,carruthers:2006_innate_culture,mccormack:2011_tool}.
-From the point of view of the proposed book, these provide useful sources of further reading for those who want more information on particular issues.
+\citep[e.g.][]{Whiten:1991qn,hirschfeld:1994_mapping,carruthers:2005_innate_structure,carruthers:2006_innate_culture,hoerl:2011_understanding}.
+In relation to the proposed book, these provide useful sources of further reading for those who want more information on particular issues.
 
-Finally, the proposed book will complement some excellent books which expound particular theories about the origins of knowledge; these include 
-	\citet{carey:2009_origin},
-	\citet{Tomasello:1999xz},
+Finally, the proposed book will complement some excellent books which introduce particular theories of the origins of knowledge; these include 
+	\citet{Elman:1996zd},
 	\citet{Gopnik:1997xq},
+	\citet{Tomasello:1999xz},
 	and
-	\citet{Elman:1996zd}.
+	\citet{carey:2009_origin}.
 The proposed book will include critical discussion of theories presented in some of these  books.  
 It's aims are clearly distinct from those of these books: the proposed book will review a range of existing findings and theories and explore philosophical questions they raise.  
 
@@ -157,7 +160,7 @@ actions
 and
 minds?
 In pursuing this question we have to consider minds where the knowledge is neither clearly present nor obviously absent. 
-This is challenging because both commonsense and theoretical tools for describing minds are generally designed for characterising fully developed adults. 
+This is challenging because both commonsense and theoretical tools for describing minds are generally suitable only for fully developed adult minds. 
 Davidson writes:
 %
 \begin{quote}
@@ -174,7 +177,7 @@ We have many vocabularies for describing nature when we regard it as mindless, a
 To understand the emergence of knowledge we need to find ways of describing what is in between: individuals whose movements are neither mindless nor guided by intention and knowledge.  
 Some progress has already been made but many challenges remain. 
 Philosophers have much to contribute in crafting distinctions and conceptual tools useful for meeting the challenges involved in describing what is in between. 
-There is also much for philosophers to gain: studying what is in between mindless nature and the sorts of cognition captured by  adult humans' everyday, pre-theoretical mentalistic notions 
+There is also much for philosophers to gain: studying what is in between mindless nature and the sorts of cognition captured by   commonsense psychological notions 
  will reveal things about what minds are and how they work.
 
 In explaining how research on developing minds bears on some existing philosophical issues and raises some new ones,
@@ -184,18 +187,17 @@ As already mentioned (in the Brief Description), the first breakthrough is the d
 may well be foundational for later linguistic abilities and enable the emergence of knowledge \citep[e.g.][]{Csibra:2009xr,Meltzoff:2007pj,Tomasello:2005wx}. 
 A second breakthrough is the use of increasingly sensitive---and sometimes controversial---methods to detect  sophisticated expectations concerning  causal interactions, numerosity, mental states and more besides in preverbal infants \citep[e.g.][]{Spelke:1990jn,Baillargeon:gx}.
 These breakthroughs are driven by researchers with conflicting theoretical positions and raise quite different issues.  
-But they both  identify ingredients necessary for understanding the developmental origins of human knowledge.
+But both breakthroughs are needed to identify ingredients necessary for understanding the developmental origins of human knowledge.
 
 
 
 \subsection{Chapter 1. Social Interaction without Words}
-Could social interaction be an enabler of cognitive development? 
-This chapter examines arguments for the hypothesis that it could
- (as offered in \citealp{Tomasello:2003tq} and \citealp{Moll:2007gu}); it also discusses objections to this hypothesis and introduces questions it raises.
+Could social interaction enable cognitive development? 
+This chapter examines arguments for the hypothesis that it could (as offered in \citealp{Tomasello:2003tq} and \citealp{Moll:2007gu}). 
+It also discusses objections to this hypothesis and introduces questions it raises.
  
-An immediate problem is that much adult social interaction depends so heavily on communication by language (not to mention social networks) that it can be hard to imagine what social interaction with preverbal infants could involve.
-Relatedly, many theoretical accounts of social interaction presuppose linguistic abilities.
-To overcome this difficulty we shall review evidence for a package of social abilities manifested in preverbal infants.
+One obstacle to even understanding the hypothesis is that much adult social interaction depends so heavily on communication by language (not to mention social networks) that it can be hard to imagine what social interaction with preverbal infants could involve.
+To overcome this obstacle we shall review evidence for a package of social abilities manifested in preverbal infants.
 These include imitation, which can occur just days and even minutes after birth \citep{meltzoff:1977_imitation,field:1982_imitation,meltzoff:1983_newborn}, 
 %for a review on imitation, see \citep{jones:2009_development}
 imitative learning \citep{carpenter:1998_fourteen}, 
@@ -209,8 +211,9 @@ Taken together, the evidence reveals that preverbal infants have surprisingly ri
 The hypothesis that these social abilities enable cognitive development faces an objection. 
 For it seems that many of these abilities already presuppose  knowledge of objects, actions and minds. 
 For instance, twelve-month old infants  will helpfully point to inform ignorant but not knowledgable adults about the location of an object  \citep{Liszkowski:2008al}.
-Some researchers take this to show that these infants are already capable of knowing about others' knowledge and ignorance. 
-If that is right, pointing and other social abilities could play at most a limited role in explaining the developmental origins of knowledge of mind. 
+Doesn't this show that these infants are already capable of knowing about others' knowledge and ignorance? 
+%could also ask whether imitation involves understand action --- after all, need to understand what to imitate!
+If so, pointing and other social abilities could play at most a limited role in explaining the developmental origins of knowledge of mind. 
 After all, we can hardly explain the emergence of something by appealing to abilities whose possession already presuppose it.
 We will encounter tools for replying to this objection in Chapters 2 (on Objects), 6 (on Actions) and 7 (on Minds).
 
@@ -227,7 +230,7 @@ When can infants first know things about objects they aren't perceiving?
 For instance, when a ball falling behind a chair disappears from view, when do infants first realise that the ball is somewhere behind the chair?
 The ability to realise this is known as `object permanence'.  
 One way to test for object permanence is to ask when infants first reach for objects they can’t see or when they first remove barriers to retrieve objects concealed behind them.  
-Infants don’t do this until around eight months \citep[p.\ 202]{Meltzoff:1998wp} or maybe later \citep{moore:2008_factors}.  
+Infants don’t do this until around eight months of age \citep[p.\ 202]{Meltzoff:1998wp} or  later \citep{moore:2008_factors}.  
 Since four-month-olds already have the planning skills they would need to execute the reach \citep{Shinskey:2001fk}, 
 their failure to reach is evidence that infants can first think about objects they aren’t perceiving at around eight months or later.  
 But another way to test for object permanence is to ask how infants respond to apparently impossible events. 
@@ -236,7 +239,7 @@ If infants show heightened interest in this and similar cases, perhaps by lookin
 %\footnote{
 %These particular studies have been attacked on methodological grounds \citep[e.g.][]{sirois:2007_social_}, but there are other, related studies \citep[some are mentioned by][]{Aguiar:2002ob}.
 %}
- As it turns out, infants show such heightened interest from around four months or earlier. 
+ As it turns out, infants show such heightened interest from around four months of age or earlier. 
 Put together, the two sorts of findings give rise to the `paradox of early permanence' (as \citealp{Meltzoff:1998wp} call it). 
 The best explanation of the first sort of findings seems to be that infants cannot think about objects they aren't perceiving until eight months or later; 
 but the best explanation of the second sort of findings seems to be that infants can do this from around four months or earlier. 
@@ -251,10 +254,11 @@ Another set of findings, using a different set of techniques,  provides convergi
 Unless they arise from methodological failings, these conflicting answers force us to recognise that the question involves a mistake. 
 The mistake is to think that there is a single kind of knowledge. 
 %As some psychologists reflecting on difficulties in understanding knowledge of objects suggest, 
-The pattern of conflict shows that we must recognise:
+In fact:
 %
 \begin{quote}
-`there are many separable systems of mental representations ...\ and thus many different kinds of knowledge. ...\ the task ...\ is to contribute to the enterprise of finding the distinct systems of mental representation and to understand their development and integration% 
+`there are many separable systems of mental representations ...\ and thus many different kinds of knowledge. ...\ 
+[T]he task ...\ is to contribute to the enterprise of finding the distinct systems of mental representation and to understand their development and integration% 
 %. ...\ the challenge ...\ is to characterize what it is about the mental representations of the presence or absence of the barriers that constrains representations of where the object should be in looking-time studies and how these representations differ from those that guide search or pointing in the present studies%
 '
 \citep[p.\ 1522]{Hood:2000bf}.
@@ -293,13 +297,14 @@ In general, infants' abilities to deal with precise numerosity are strictly limi
 It seems clear, then, that infants do not have adult-like number concepts. 
 
 The three-item limit on infants' abilities to deal with precise numerosity is the key to a revealing discovery.
-Many species besides humans have abilities to deal with precise numerosity which are also subject to limits like infants' three-item limit; this suggests that they are  closely related \citep{hauser:2003_spontaneous}.  
+Many species besides humans have abilities to deal with precise numerosity.
+Because these abilities are also subject to limits like infants' three-item limit, it is reasonable to hold that they are  closely related \citep{hauser:2003_spontaneous}.  
 %In fact, infant-like, limited abilities can also be found in human adults who have number concepts. 
-This tells us that infants' core knowledge of number is unlikely to be a product of learning \citep{feigenson:2004_core} and so supports a modest form of nativism.
+This makes it unlikely that infants' core knowledge of number is  a product of learning \citep{feigenson:2004_core}, and so supports a modest form of nativism.
 
 A bolder form nativism would insist not only that core knowledge of number is innate but also that number concepts proper are innate \citep{Fodor:1981ep}. 
 Against this bolder view, some have attempted to explain how core knowledge together with mastery of a sequence number words could explain how number concepts can be acquired \citep{carey:2009_origin}. 
-If successful, this explanation shows that not all primitive concepts are innate and provides us with one model of how core knowledge might enable the emergence of knowledge proper.
+If successful, this explanation shows that not all primitive concepts are innate and provides us with one model of how core knowledge together with linguistic abilities might enable the emergence of knowledge proper.
 
 
 
@@ -315,7 +320,7 @@ Categorical perception of colour emerges early in infancy.  This has been demons
 %say something about ERP / oddball study \citep{Clifford:2009fo}
 Slightly older infants can make use of colour properties such as red and green to recognise objects.  
 For instance, nine-months-olds can determine whether an object they saw earlier is the same as a subsequently presented object on the basis of its colour \citep{Wilcox:2008jk}.  
-By the time they are two years old, toddlers who do not comprehend any colour terms can use colour categories implicitly in learning and using proper names; for instance, they are able to learn and use proper names for toy dinosaurs that differ only in colour \citep[][Experiment 3]{Soja:1994np}.  
+By the time they are two years old, toddlers who do not comprehend any colour words can use colour categories implicitly in learning and using proper names; for instance, they are able to learn and use proper names for toy dinosaurs that differ only in colour \citep[][Experiment 3]{Soja:1994np}.  
 So infants and toddlers enjoy categorical perception of colour and may benefit from it in recognising and learning about objects.  
 However children only acquire concepts of, and words for, colours some time later; and colour concepts, like colour words, are acquired gradually \citep{Pitchford:2005hm,Kowalski:2006hk,Sandhofer:1999if,Sandhofer:2006qo}. 
 
@@ -328,10 +333,10 @@ This hypothesis turns out to be entirely mistaken.
 The extensions of colour words may be subject to universal constraints but they certainly vary significantly between languages  \citep{kay:2003_resolving}.
 %can use figure from Kay & Regier 2007 Berinmo on p. 291
 The boundaries of adult humans' colour concepts and their perceptual colour categories  are influenced by the extensions of the colour words they use \citep{Kay:2006ly,Roberson:2007wg,Winawer:2007im}. 
-It is even possible to alter the boundaries of adults' perceptual categories by teaching them new colour terms
+It is even possible to alter the boundaries of adults' perceptual categories by teaching them new colour words
 \citep{Ozgen:2002yk}. 
-But infants' perceptual colour categories are not influenced by colour words; after all, they don't use colour words. 
-Indeed, in toddlers who have recently acquired colour terms, the extensions of their colour concepts do not match their perceptual category boundaries \citep{Franklin:2005hp}. 
+But preverbal infants' perceptual colour categories are not influenced by colour words. 
+Indeed, in toddlers who have recently acquired colour words, the extensions of their colour concepts do not match their perceptual category boundaries \citep{Franklin:2005hp}. 
 So it is a mistake to think of the development of colour words and concepts as a matter of learning to label or demonstratively refer to categories infants are already perceptually acquainted with. 
 Quite the reverse: acquiring colour words and concepts is a prerequisite for being able to perceive the colour categories they refer to.
 
@@ -358,38 +363,116 @@ Compare Wittgenstein (\citeyear[p.\ 77]{Wittgenstein:1972lj}):
 %
 \begin{quote}
 `The child learns this language from the grown-ups by being trained to its use. I am using the word ``trained'' in a way strictly analogous to that in which we talk of an animal being trained to do certain things. It is done by means of example, reward, punishment, and suchlike.'
+%careful with this quote --- from the context Wittgenstein is imagining how things might be, not how they are.
+%but this quote shows that he is serious about how children are:
+%`A child uses such primitive forms of language when it learns to talk. Here the teaching of language is not explanation, but training.' \citep[§5, p.\ 4]{Wittgenstein:1953mm}
+%And:
+%`The primitive language-game which children are taught needs no justification; attempts at justification need to be rejected.' \citep[p.\ 200]{Wittgenstein:1953mm}
+%And:
+%`I myself wrote in my book that children learn to understand a word in such and such a way. Do I know that, or do I believe it? Why in such a case do I write not "I believe etc." but simply the indicative sentence?' \citep[§290, p.\ 38]{Wittgenstein:1974dk}
+%
 %See also Russell (1921: 71): “A child learning to speak is learning habits and associations which are just as much determined by the environment as the habit of expecting dogs to bark and cocks to crow. The community that speaks a language has learnt it, and modified it by processes almost all of which are not deliberate, but the results of causes operating according to more or less ascertainable laws.”
 \end{quote}
 %
-If this sort of view were right, abilities to communicate linguistically would not necessarily depend on knowledge proper and so it would be possible to appeal to linguistic communication in explaining the developmental origins of knowledge.
-Against Wittgenstein, experimental findings support the hypothesis that children solve the mapping problem by general reasoning and rely on social cognition
+If this sort of view were right, abilities to communicate linguistically would not necessarily depend on knowledge proper and so it would be possible to appeal to linguistic communication in explaining the developmental origins of knowledge. 
+%Compare Wittgenstein again:
+%`535. The child knows what something is called if he can reply correctly to the question "what is that called?"
+%536. Naturally, the child who is just learning to speak has not yet got the concept is called at all.
+%537. Can one say of someone who hasn't this concept that he knows what such-and-such is called?
+%538. The child, I should like to say, learns to react in such-and-such a way; and in so reacting it doesn't so far know anything. Knowing only begins at a later level.'
+%\citep[p.\ 71]{Wittgenstein:1974dk}
+This does indeed seem plausible for the special case of colour words, as we saw in Chapter 4 (on Colours); 
+and something like it may hold for number words too (see Chapter 3 on Numbers).  
+%ref to Wittgenstein on child learning about numbers somewhere?
+But putting these special cases aside, the experimental findings do not support Wittgenstein's view.
+Instead they support the hypothesis that children solve the mapping problem by general reasoning and rely on social cognition
 \citep{Baldwin:1995xl,Bloom:2000qz,Sabbagh:2001sp}. 
 %Also talk about language creation here (see lexical innovation paper)
 
 This hypothesis conflicts with Davidson's claims that having thoughts involves grasping the concept of truth \citep[p.\ 189]{Davidson:2001sm}, 
 % `What gives my belief its content ... is my knowledge of what is required for the belief ... to be true' \citep[p.\ 189]{Davidson:2001sm}, 
 and that `we grasp the concept of truth only when we can communicate the contents—the propositional contents—of the shared experience, and this requires language' \citep[p.\ 27]{Davidson:1997wj}.
-The objection to Davidson's view is that that it has things backwards: acquiring your first words already involves thinking about what they pick out. 
+% also:
+%`language ... is, or has become, a mode of perception.  However, speech is not just one more organ; it is essential to the other senses if they are to yield propositional knowledge' \citep[p.\ 22]{Davidson:1997wj}
+% also:
+%`Mastery of the word or concept [`table'] requires in addition, I believe, that the child understand that error is possible, that "That's a table' expresses a judgment that has a truth value independent of its merely being uttered.' \citep[p.\ 9]{Davidson:2001np}
+%
+The objection to Davidson's view is that  it has things backwards: acquiring your first words already involves thinking about what they pick out. 
 If this objection is correct, can anything be salvaged from Davidson's arguments? 
 While the objection rules out claiming that being able to think depends on being able to communicate propositional contents using language, it leaves open the possibility that thought is essentially intersubjective.
 One challenge, then, is to explain the intersubjectivity of thought without appeal to communication by language.
 
 So far our focus has been the mapping problem, the problem of determining which words pick what out. 
 A distinct and no less difficult problem is how infants come to understand words as communicative tools at all.
-Merely associating a word or gesture with what it picks out would not enable an infant to respond appropriately to uses of that word or gesture, nor to use it intelligently. 
+Merely associating a word or gesture with what it picks out would not enable a child to respond appropriately to uses of that word or gesture, nor to use it intelligently (contra \citealp[p.\ 75]{Russell:1921ww}).
+%`four ways of understanding words:
+%[...]
+%(4) When the word is being first learnt, you may associate it with an object, which is what it "means," or a representative of various objects that it "means."
+%In the fourth case, the word acquires, through association, some of the same causal efficacy as the object. The word "motor" can make you leap aside, just as the motor can, but it cannot break your bones. The effects which a word can share with its object are those which proceed according to laws other than the general laws of physics, i.e. those which, according to our terminology, involve vital movements as opposed to merely mechanical movements.'
+%\citep[p.\ 75]{Russell:1921ww} 
 After all, chimpanzees associate pointing gestures with their referents \citep[][p.\ 6]{Moll:2007gu} but fail to respond appropriately to helpful pointing gestures \citep{hare_chimpanzees_2004}. 
-Unlike chimpanzees, infants not only map words to what they pick out but also use and understand them as tools for communication. 
-What does this understanding amount to---in particular, do infants have an adult-like understanding of communicative intention---and how do infants acquire it?
+Unlike chimpanzees, children not only map words to what they pick out but also use and understand them as tools for communication. 
+What does this understanding amount to---in particular, do children learning their first words already have an adult-like understanding of communicative intention?  And how do children acquire this understanding?
 %On one view, it involves a special `action interpretation system' distinct from that involved in understanding ordinary, non-communicative action \citep[p.\ 456]{Csibra:2003kp}. 
 %***This question is pressing because we want to appeal to language to explain the emergence of full-blown mindreading
-Answering this question may require revisions or extensions to existing philosophical accounts of communication which often presuppose conceptual sophistication \citep[e.g.][]{Grice:1957kg}.
+Answering these questions may require revisions or extensions to existing philosophical accounts of communication which often presuppose conceptual sophistication \citep[e.g.][]{Grice:1957kg}.
 
 
 
 
 \subsection{Chapter 6. Actions: Teleology and Motor Awareness}
-\label{ch:actions}
+%Astington's paradox:
+%\begin{quote}
+%`There is something paradoxical about intention attribution.
+%Though it is true that motivational states are more obvious and more frequently inferred than beliefs, the attribution of intention---in a precise and complete sense---is not simpler, and may indeed be harder, than the attribution of belief'
+%\citep[p.\ 85]{astington:2001_paradox}
+
+Understanding goal-directed action involves being able to identify which events are actions and to link actions to the goals to which they are directed.
+Infants' expectations indicate that they can do both of these things from some time around the end of their first year of life \citep{Csibra:2003kp}. 
+Suppose we take these expectations to show that infants understand action.
+In what could this understanding consist?
+
+On a standard view, for an event to be a goal-directed action requires that it stands in some relation to an intention. 
+Intentions are propositional attitudes which play characteristic roles in planning and coordinating action, are linked to practical reasoning and are subject to characteristic norms \citep{Bratman:1987xw}.
+On this view, an action is directed to a goal in virtue of being an event related  an intention whose content specifies this goal. 
+Accordingly, understanding action involves understanding intentions and so having mastered propositional attitude psychology.
+This view of what understanding action consists in coheres with the views of those who hold that one-year-old infants understand psychological notions like belief and desire \citep{Baillargeon:gx}.
+But this view is incompatible with  views on which early understanding of action plays a role in explaining how children later acquire knowledge of belief, desire and other mental states.
+
+An alternative view of action and action understanding does not demand knowledge of intentions.
+Instead of thinking of the relation between actions and the goals to which they are directed as determined by intentions representing those goals,
+we might instead attempt to explain the relation in terms of justification:
+%
+\begin{quote}
+`the principle of rational action ... states that an action can be explained by a goal state if, and only if, it is seen as the most justifiable action towards that goal state that is available within the constraints of reality' 
+(Csibra and Gergely 1998: 255; cf. Csibra, Bíró, et al. 2003)
+\end{quote}
+%
+***Don't we have to separate out the question of which events are actions?
+***Want to argue that the view is still demanding---and incompatible with modularity---because requires reasoning about justification.  
+Indeed:
+%
+\begin{quote}
+`when taking the teleological stance one-year-olds apply the same inferential principle of rational action that drives everyday mentalistic reasoning about intentional actions in adults' \citep[p.\ 259]{Csibra:1998cx}\citep[compare][p.\ 290]{Gergely:2003gb}
+\end{quote}
+%
 ***
+
+%Some philosophers oppose the standard view of goal-directed action.
+%Instead of explaining the directedness of actions to goals by appeal to intentions which represent those goals, 
+%it is at least theoretically coherent to suppose that an action's being directed to an outcome may consist in its having the function of bringing about that outcome. 
+%Here function should be construed teleologically. 
+%One perhaps inadequate but illustrative construal says that an action has the function of bringing about an outcome just if (i) actions of this type have brought about outcomes of this type in the past, and (ii) this action occurs now in part because of that fact.
+%Teleological accounts of function, and of the application of this notion to understanding goal-directed action, have been extensively developed \citep[see further][]{Godfrey-Smith:1996ln,Millikan:1984ib,Neander:1991to,Price:2001hs,Wright:1976ls}.
+
+There is a radical alternative ... understanding consist in motor awareness of action ...
+\begin{quote}
+\citep[p.\ 154]{bekkering:2000_imitation}: `behaviours are not simply replicated as unified, non-decomposed motor patterns. Rather, imitation involves first a decomposition of the motor patterns into their constituent components and later a reconstruction of the action pattern from these components. Second, the decomposition--reconstruction process is guided by an interpretation of the motor pattern as a goal- directed behaviour. Thus, the constituent elements in the mediating representation involve goals rather than motor segments. Third, we assume that these goals are represented in a hierarchical pattern with some of the encoded goals being dominant over others.' 
+\end{quote}
+
+***parallels between how visual representations and processes enable experiences of objects and how motor representations and processes enable experiences of actions. Of course, just as not every visual representation leaves its mark on experience, there are surely many motor representations that are only distantly if at all related to experience. But, equally, there are experiences which depend in part on motor representation in much the way that some visual experiences depend in part on visual representations.
+
+
 
 
 \subsection{Chapter 7. Beliefs}
@@ -408,7 +491,7 @@ The following three claims are separately defensible but appear to be jointly in
 This chapter will first consider evidence and theoretical arguments in support of each claim in turn.  
 
 There is a growing body of evidence for (\ref{infant_fb}).
-From around their first birthday infants  predict actions of agents with false beliefs about the locations of objects \citep[]{Onishi:2005hm, Southgate:2007js}. 
+From around their first birthday infants  predict actions of agents with false beliefs about the locations of objects \citep[]{Onishi:2005hm, Southgate:2007js}
 and choose different ways of interacting with others depending on whether their beliefs are true or false \citep[]{Buttelmann:2009gy,Knudsen:2011fk,southgate:2010fb}.  
 And in much the way that irrelevant facts about the contents of others’ beliefs modulate adult subjects’ response times, such facts also affect how long 7-month-old infants look at some stimuli \citep[]{kovacs_social_2010}.
 The variety of  measures---looking time, anticipatory looking, pointing and helping---makes it hard to dismiss these findings on methodological grounds.
@@ -425,7 +508,7 @@ These tasks are very varied: most are verbal but some are nonverbal (\citealp{Ca
 some involve prediction whereas others involve retrodiction or justification \citep[e.g.][]{Wimmer:1998kx},
 some concern the first-person perspective, whereas others involve a second- or third-person perspective \citep[e.g.][]{Gopnik:1991db},
 some involve interaction whereas in others the subject is a mere observer \citep[e.g.][]{Chandler:1989qa},
-and some involve prediction actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}. 
+and some involve predicting actions whereas others involve predicting desires \citep{Astington:1991kk} or selecting an argument appropriate for someone with a false belief \citep{Bartsch:2000es}. 
 Despite all this variation and more, these false belief tasks all appear to measure a single developmental transition \citep{Wellman:2001lz},
 and that developmental transition is linked to developments in abilities to process perspective difficulties \citep{Perner:2002jj} and to reason counterfactually \citep{rafetseder:2012_submitted}.
 While some researchers have claimed that the developmental transition these false belief tasks measure is not a transition in understanding belief 
@@ -461,7 +544,8 @@ One is to reject (1) \citep[e.g.][]{Perner:2005hq},
 another is to reject (2),
  and a third is to argue that the inconsistency is only apparent by appeal to a distinction such as that between core knowledge and knowledge proper \citep[e.g.][]{Clements:1994cw,low:2010_preschoolers}.
 We have seen objections to each of these responses.
-This indicates that we do not adequately understand what is involved in representing beliefs and, more generally, what it is to have a theory of mind.
+This indicates that we do not adequately understand what is involved in representing beliefs and, more generally, what it is to have %a theory of mind 
+knowledge of minds.
 
 %This is intended as leading in to measurement and minimal theory of mind
 
